--- a/index.html
+++ b/index.html
@@ -2,3 +2,6 @@
 layout: home
 # Index page
 ---
+¡Bienvenidos a mi blog! Aquí encontrarás mis pensamientos, proyectos y mucho más.
+
+Este es un texto de ejemplo para la página de inicio. Puedes escribir sobre ti, sobre el propósito del blog, o cualquier otra cosa que quieras destacar.
