--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@ layout: home
 # Index page
 ---
 #¡Bienvenidos a mi blog! Aquí encontrarás mis pensamientos, proyectos y mucho más.
-#Este es un texto de ejemplo para la página de inicio. Puedes escribir sobre ti, sobre el propósito del blog, o cualquier otra cosa que quieras destacar.
+##Este es un texto de ejemplo para la página de inicio. Puedes escribir sobre ti, sobre el propósito del blog, o cualquier otra cosa que quieras destacar.
